# machine_vision_tutorials

./: .gitignore  README.md
00_cpp_reference/: CMakelists.txt  logic.cpp  reference.cpp
00_py_reference/: logic.py  reference.py
01_install_opencv/: 01_install_opencv.md  example.py
01_loading_and_saving_an_image/: README.md
01_loading_and_saving_an_image/activity_1/: main.cpp
01_loading_and_saving_an_image/activity_2/: main.cpp
01_loading_and_saving_an_image/sample_2/: main.cpp
01_mat_object_math/py/: 01_mat.py  mat.py
02_filtering/cpp/: utils.cpp
02_filtering/cpp/01_filter/: CMakeLists.txt
02_filtering/cpp/03_median/: CMakeLists.txt  median.cpp
02_filtering/py/: 01_filter.py  02_gaussian.py
02_mat_object_math/: 02_mat_object_math.md
02_mat_object_math/cpp/: mat.cpp
02_mat_object_math/py/: 01_mat.py
02_working_with_an_images_pixels/sample_1/: main.cpp
03_drawing_lines_and_writing_text/activity_2/: CMakeLists.txt
03_drawing_lines_and_writing_text/sample_1/: main.cpp
03_edge_detection/cpp/01_sobel/: sobel.cpp
03_edge_detection/py/: 03_cv_canny.py
03_filtering/: 03_filtering.md
03_filtering/cpp/01_filter/: filter.cpp
03_filtering/cpp/02_gaussian/: gaussian.cpp
03_filtering/py/: 01_filter.py  02_gaussian.py  03_median.py
04_edge_detection/: 03_edge_detection.md  04_edge_detection.md
04_edge_detection/py/: 01_sobel.py  02_manual_canny.py  03_cv_canny.py
04_morphological_transforms/cpp/06_gray_dilate/: CMakeLists.txt
04_morphological_transforms/py/: 02_dilate.py  03_opening.py  04_closing.py  05_gray_erode.py  06_gray_dilate.py  08_gray_closing.py
05_morphological_transforms/: 05_morphological_transforms.md
05_morphological_transforms/py/: 01_erode.py  03_opening.py  07_gray_opening.py
05_video_capture/py/: video.py
06_shape_detection/py/: 01_hough_lines.py  02_prob_hough_lines.py
06_video_capture/: 06_video_capture.md
06_video_capture/py/: 01_video.py
07_contour_detection/sample_1/: main.cpp  main.py
07_segmentation/py/: 01_threshold.py  02_kmeans.py
07_shape_detection/: 07_shape_detection.md
07_shape_detection/py/: 01_hough_lines.py  02_prob_hough_lines.py  line.py
08_color_spaces/py/: 01_BGR_color_space.py  03_YUV_color_space.py
08_segmentation/: 08_segmentation.md
08_segmentation/py/: 01_threshold.py  02_kmeans.py
09_color_spaces/: 09_color_spaces.md
09_color_spaces/py/: 01_BGR_color_space.py  02_RGB_color_space.py  03_YUV_color_space.py  04_HSV_color_space.py
09_region_labeling/cpp/: CMakeLists.txt  region_labelling.cpp
09_region_labeling/py/: 01_region_labelling.py
10_feature_detection/py/: 01_HOG_descriptor.py  03_feature_detection.py
10_region_labeling/: 10_region_labeling.md
10_region_labeling/py/: 01_region_labelling.py
11_feature_detection/: 11_feature_detection.md
11_feature_detection/py/: 01_HOG_descriptor.py  03_simple_detection.py  04_feature_detection.py
11_feature_matching/py/: 03_matching.py
12_feature_matching/: 12_feature_matching.md
12_feature_matching/py/: 03_matching.py
12_machine_learning/: 02_tf.py  04_tf.py  05_tf.py
12_machine_learning/unet/: predict.py  test.py
13_machine_learning/: 03_tf.py  README.md
activities/01_getting_started/: README.md
activity_1/: README.md
activity_1/reference/: CMakeLists.txt
activity_1/test/: main.cpp  main.hpp
camera_source/: CMakeLists.txt  main.cpp  main.hpp
old_tutorials/06_edge_and_color_detection/: README.md
project_template/: CMakeLists.txt  CMakeSettings.json  main.cpp  vision.cpp  vision.hpp
projects/qt_opencv/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  opencv.cpp  opencv.h  opencv_algorithm.cpp  opencv_algorithm.h
projects/qt_project_template/: gui.cpp  gui.hpp  main.hpp
projects/qt_tutorial_1/sample_1/: CMakeLists.txt  gui.cpp  gui.hpp  main.cpp
qt_projects/qt_opencv/: CMakeLists.txt  CMakeLists.txt.user.11033ae  CMakeLists.txt.user.fc872c4  mainwindow.ui
qt_projects/qt_project_template/: CMakeLists.txt  gui.cpp  gui.hpp
qt_tutorial_1/: README.md
qt_tutorial_1/sample_1/: CMakeLists.txt
qt_tutorial_2/: README.md
qt_tutorial_2/sample_1/: gui.cpp  vision.cpp  vision.hpp
samples/00_mat_object/: subtract.py
samples/01_video_capture/cpp/: CMakeLists.txt  main.cpp  main.hpp
samples/02_Filtering/: 01_filter.py  02_gaussian.py  03_median.py  utils.py
samples/02_Filtering/cpp/: CMakeLists.txt  utils.hpp
samples/02_Filtering/cpp/02_gaussian/: CMakeLists.txt  utils.cpp
samples/03_edge_detection/: 01_sobel.py  02_manual_canny.py  03_cv_canny.py
samples/04_morphological_transforms/: 02_dilate.py  03_opening.py  04_closing.py  05_gray_erode.py  06_gray_dilate.py  07_gray_opening.py  08_gray_closing.py
samples/04_morphological_transforms/cpp/03_opening/: CMakeLists.txt  opening.cpp
samples/06_segmentation/: 01_threshold.py  02_kmeans.py
samples/06_segmentation/cpp/02_kmeans/: CMakeLists.txt  kmeans.cpp
samples/08_region_labeling/: 01_region_labelling.py
samples/09_feature_detection/: 01_HOG_descriptor.py  03_feature_detection.py
samples/10_feature_matching/: 02_hamming.py  03_matching.py
samples/11_machine_learning/: 01_SVM.py  02_tf.py  03_tf.py  04_tf.py  utils.py
tutorial_1/activity_1/: CMakeLists.txt
tutorial_1/activity_2/: CMakeLists.txt
tutorial_1/sample_1/: CMakeLists.txt  main.cpp  main.hpp
tutorial_1/sample_2/: CMakeLists.txt  main.cpp  main.py
tutorial_2/: README.md
tutorial_2/activity_1/: main.cpp
tutorial_2/sample_1/: CMakeLists.txt  main.cpp  main.py
tutorial_3/: README.md
tutorial_3/sample_1/: CMakeLists.txt  main.cpp
tutorial_3/sample_2/: CMakeLists.txt  main.cpp  main.py
tutorial_4/: README.md
tutorial_4/sample_1/: main.cpp
tutorial_5/: README.md
tutorial_5/sample_1/: CMakeLists.txt  main.cpp  main.py
tutorial_6/: README.md
tutorial_6/sample_1/: main.cpp  main.py
tutorial_6/sample_2/: CMakeLists.txt  main.cpp  main.py
tutorial_7/: README.md
tutorial_7/activity_1/: main.cpp
tutorial_7/sample_1/: CMakeLists.txt  main.cpp  main.hpp
tutorial_template/: README.md
tutorial_template/sample_1/: main.cpp
(+60 files in other folders)
